# experience_people_dentification_map

./: .gitignore  compose.yaml
backend/: Cargo.toml  Containerfile
backend/src/: camera.rs  lib.rs  main.rs  models.rs  routes.rs  state.rs  store.rs
backend/src/handlers/: camera.rs  detections.rs  health.rs  mod.rs  spaces.rs
frontend/: Containerfile  index.html  nginx.conf  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: floor.ts
frontend/src/components/: CameraFeed.tsx  ErrorMessage.tsx  FloorDashboard.tsx  FloorPlanMap.tsx  FontSizeToggle.tsx  SpaceDetails.tsx  ZoneLegend.tsx
frontend/src/hooks/: useFloor.ts  useFontScale.ts
frontend/src/styles/: base.css  floor.css
frontend/src/types/: floor.ts
frontend/src/utils/: formatFloor.ts
programming_exam/: .containerignore  .gitignore  Containerfile  README.md  docker-entrypoint.sh  nginx.conf  requirements.txt
programming_exam/configs/: person.yaml
programming_exam/src/: detect.py  person_detector.py  train_person.py  web_app.py
programming_exam/web/: app.js  index.html  styles.css
